--- a/cmd/otelcontribcol/Dockerfile
+++ b/cmd/otelcontribcol/Dockerfile
@@ -1,14 +1,7 @@
-FROM alpine:latest@sha256:a8560b36e8b8210634f77d9f7f9efd7ffa463e380b75e2e74aff4511df3ef88c AS prep
-RUN apk --update add ca-certificates
-
-FROM scratch
-
+FROM --platform=linux/amd64 gcr.io/distroless/base-debian11
 ARG USER_UID=10001
 ARG USER_GID=10001
 USER ${USER_UID}:${USER_GID}
-
-COPY --from=prep /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 COPY otelcontribcol /
-EXPOSE 4317 55680 55679
-ENTRYPOINT ["/otelcontribcol"]
-CMD ["--config", "/etc/otel/config.yaml"]
+EXPOSE 4317/tcp 55680/tcp 55678/tcp 55679/tcp 8086/tcp
+CMD ["/otelcontribcol"] 
